--- a/projektinis.ipynb
+++ b/projektinis.ipynb
@@ -2,27 +2,282 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'YouTube' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encrypted text:\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"NoneType\") to str",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/n7/nl3r51111bd91bmy_cbvf8100000gn/T/ipykernel_76295/2687927244.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpytube\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0myt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mYouTube\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"https://www.youtube.com/watch?v=n06H7OcPd-g\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0myt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mp4'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'720p'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0myt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/path/to/download/directory'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'YouTube' is not defined"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mText:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEncrypted text:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 34\u001b[0m \u001b[43mencrypted\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36mencrypted\u001b[0;34m(message)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m letters \u001b[38;5;129;01min\u001b[39;00m message:\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m letters \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 23\u001b[0m         encrypted_text \u001b[38;5;241m=\u001b[39m \u001b[43mencrypted_text\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m\\\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[43m            \u001b[49m\u001b[43mmorzesabc_dict\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mletters\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     27\u001b[0m         encrypted_text \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
      ]
     }
    ],
    "source": [
+    "morzesabc_dict = {'A': '.-', 'B': '-...', 'C': '-.-.', \n",
+    "                    'D': '-..', 'E': '.', 'F': '..-.', \n",
+    "                    'G': '--.', 'H': '....','I': '..', \n",
+    "                    'J': '.---', 'K': '-.-','L': '.-..',\n",
+    "                    'M': '--', 'N': '-.','O': '---', \n",
+    "                    'P': '.--.','Q': '--.-','R': '.-.', \n",
+    "                    'S': '...', 'T': '-','U': '..-', \n",
+    "                    'V': '...-', 'W': '.--','X': '-..-',\n",
+    "                    'Y': '-.--', 'Z': '--..',\n",
+    "                    '1': '.----','2': '..---', '3': '...--',\n",
+    "                    '4': '....-', '5': '.....', '6': '-....',\n",
+    "                    '7': '--...', '8': '---..', '9': '----.',\n",
+    "                    '0': '-----', ', ': '--..--', '.': '.-.-.-',\n",
+    "                    '?': '..--..', '/': '-..-.', '-': '-....-',\n",
+    "                    '(': '-.--.', ')': '-.--.-'}\n",
+    "\n",
+    "\n",
+    "def encrypted(message):\n",
+    "\n",
+    "    encrypted_text = \"\"\n",
+    "    for letters in message:\n",
+    "        if letters != \" \":\n",
+    "            encrypted_text = encrypted_text + \\\n",
+    "                morzesabc_dict.get(letters) + \" \"\n",
+    "\n",
+    "        else:\n",
+    "            encrypted_text += \" \"\n",
+    "\n",
+    "    print(encrypted_text)\n",
+    "\n",
+    "\n",
+    "text = input(\"Text:\")\n",
+    "print('Encrypted:')\n",
+    "encrypted(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/urllib/request.py\", line 1346, in do_open\n",
+      "    h.request(req.get_method(), req.selector, req.data, headers,\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/http/client.py\", line 1279, in request\n",
+      "    self._send_request(method, url, body, headers, encode_chunked)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/http/client.py\", line 1325, in _send_request\n",
+      "    self.endheaders(body, encode_chunked=encode_chunked)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/http/client.py\", line 1274, in endheaders\n",
+      "    self._send_output(message_body, encode_chunked=encode_chunked)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/http/client.py\", line 1034, in _send_output\n",
+      "    self.send(msg)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/http/client.py\", line 974, in send\n",
+      "    self.connect()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/http/client.py\", line 1448, in connect\n",
+      "    self.sock = self._context.wrap_socket(self.sock,\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/ssl.py\", line 500, in wrap_socket\n",
+      "    return self.sslsocket_class._create(\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/ssl.py\", line 1040, in _create\n",
+      "    self.do_handshake()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/ssl.py\", line 1309, in do_handshake\n",
+      "    self._sslobj.do_handshake()\n",
+      "ssl.SSLCertVerificationError: [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:1129)\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tkinter/__init__.py\", line 1892, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"/var/folders/n7/nl3r51111bd91bmy_cbvf8100000gn/T/ipykernel_2081/584628814.py\", line 21, in download\n",
+      "    pytube.YouTube(link.get()).streams.first().download(skip_existing=True, output_path=\"./\")\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pytube/__main__.py\", line 91, in __init__\n",
+      "    self.prefetch()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pytube/__main__.py\", line 162, in prefetch\n",
+      "    self.watch_html = request.get(url=self.watch_url)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pytube/request.py\", line 36, in get\n",
+      "    return _execute_request(url).read().decode(\"utf-8\")\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pytube/request.py\", line 24, in _execute_request\n",
+      "    return urlopen(request)  # nosec\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/urllib/request.py\", line 214, in urlopen\n",
+      "    return opener.open(url, data, timeout)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/urllib/request.py\", line 517, in open\n",
+      "    response = self._open(req, data)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/urllib/request.py\", line 534, in _open\n",
+      "    result = self._call_chain(self.handle_open, protocol, protocol +\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/urllib/request.py\", line 494, in _call_chain\n",
+      "    result = func(*args)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/urllib/request.py\", line 1389, in https_open\n",
+      "    return self.do_open(http.client.HTTPSConnection, req,\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/urllib/request.py\", line 1349, in do_open\n",
+      "    raise URLError(err)\n",
+      "urllib.error.URLError: <urlopen error [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:1129)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter\n",
     "import pytube\n",
     "\n",
-    "yt = YouTube(\"https://www.youtube.com/watch?v=n06H7OcPd-g\")\n",
-    "yt = yt.get('mp4', '720p')\n",
-    "yt.download('/path/to/download/directory')"
+    "root = tkinter.Tk()\n",
+    "root.geometry(\"350x325\")\n",
+    "root.title(\"YouTube Downloader\")\n",
+    "root.resizable(0,0)\n",
+    "root.wm_minsize(0,0)\n",
+    "\n",
+    "\n",
+    "myVar = tkinter.StringVar()\n",
+    "myVar.set(\"YouTube Link:\")\n",
+    "tkinter.Label(root, textvariable=myVar, width=50).pack(pady=5)\n",
+    "\n",
+    "link = tkinter.StringVar()\n",
+    "\n",
+    "def download():\n",
+    "   \n",
+    "        myVar.set(\"\")\n",
+    "        root.update()\n",
+    "        pytube.YouTube(link.get()).streams.first().download(skip_existing=True, output_path=\"./\")\n",
+    "        w = TextWrapper()\n",
+    "        w.width = 50\n",
+    "        title_wrapped = \"\\n\".join(w.wrap(str(pytube.YouTube(link.get()).title)))\n",
+    "        myVar.set(\"Great success\".format(title_wrapped))\n",
+    "   \n",
+    "\n",
+    "tkinter.Entry(root, textvariable=link, width=40).pack(pady=10)\n",
+    "tkinter.Button(root, text=f\"Download!\", command=download, fg=\"green\", bg=\"white\").pack()\n",
+    "\n",
+    "\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "b'[AUTHENTICATIONFAILED] Invalid credentials (Failure)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m imap \u001b[38;5;241m=\u001b[39m imaplib\u001b[38;5;241m.\u001b[39mIMAP4_SSL(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimap.gmail.com\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# authenticate\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m \u001b[43mimap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlogin\u001b[49m\u001b[43m(\u001b[49m\u001b[43musername\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpassword\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# select a mailbox (in this case, the inbox mailbox)\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# use imap.list() to get the list of mailboxes\u001b[39;00m\n\u001b[1;32m     26\u001b[0m status, messages \u001b[38;5;241m=\u001b[39m imap\u001b[38;5;241m.\u001b[39mselect(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mINBOX\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/imaplib.py:612\u001b[0m, in \u001b[0;36mIMAP4.login\u001b[0;34m(self, user, password)\u001b[0m\n\u001b[1;32m    610\u001b[0m typ, dat \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_simple_command(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLOGIN\u001b[39m\u001b[38;5;124m'\u001b[39m, user, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_quote(password))\n\u001b[1;32m    611\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m typ \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOK\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m--> 612\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39merror(dat[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m    613\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAUTH\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    614\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m typ, dat\n",
+      "\u001b[0;31merror\u001b[0m: b'[AUTHENTICATIONFAILED] Invalid credentials (Failure)'"
+     ]
+    }
+   ],
+   "source": [
+    "import imaplib\n",
+    "import email\n",
+    "from email.header import decode_header\n",
+    "import webbrowser\n",
+    "import os\n",
+    "\n",
+    "# account credentials\n",
+    "username = \"bulpau@gamil.com\"\n",
+    "password = \"Raudona69!\"\n",
+    "\n",
+    "\n",
+    "def clean(text):\n",
+    "    # clean text for creating a folder\n",
+    "    return \"\".join(c if c.isalnum() else \"_\" for c in text)\n",
+    "\n",
+    "# number of top emails to fetch\n",
+    "N = 3\n",
+    "\n",
+    "# create an IMAP4 class with SSL, use your email provider's IMAP server\n",
+    "imap = imaplib.IMAP4_SSL(\"imap.gmail.com\")\n",
+    "# authenticate\n",
+    "imap.login(username, password)\n",
+    "\n",
+    "# select a mailbox (in this case, the inbox mailbox)\n",
+    "# use imap.list() to get the list of mailboxes\n",
+    "status, messages = imap.select(\"INBOX\")\n",
+    "\n",
+    "# total number of emails\n",
+    "messages = int(messages[0])\n",
+    "\n",
+    "for i in range(messages, messages-N, -1):\n",
+    "    # fetch the email message by ID\n",
+    "    res, msg = imap.fetch(str(i), \"(RFC822)\")\n",
+    "    for response in msg:\n",
+    "        if isinstance(response, tuple):\n",
+    "            # parse a bytes email into a message object\n",
+    "            msg = email.message_from_bytes(response[1])\n",
+    "            # decode the email subject\n",
+    "            subject, encoding = decode_header(msg[\"Subject\"])[0]\n",
+    "            if isinstance(subject, bytes):\n",
+    "                # if it's a bytes, decode to str\n",
+    "                subject = subject.decode(encoding)\n",
+    "            # decode email sender\n",
+    "            From, encoding = decode_header(msg.get(\"From\"))[0]\n",
+    "            if isinstance(From, bytes):\n",
+    "                From = From.decode(encoding)\n",
+    "            print(\"Subject:\", subject)\n",
+    "            print(\"From:\", From)\n",
+    "            # if the email message is multipart\n",
+    "            if msg.is_multipart():\n",
+    "                # iterate over email parts\n",
+    "                for part in msg.walk():\n",
+    "                    # extract content type of email\n",
+    "                    content_type = part.get_content_type()\n",
+    "                    content_disposition = str(part.get(\"Content-Disposition\"))\n",
+    "                    try:\n",
+    "                        # get the email body\n",
+    "                        body = part.get_payload(decode=True).decode()\n",
+    "                    except:\n",
+    "                        pass\n",
+    "                    if content_type == \"text/plain\" and \"attachment\" not in content_disposition:\n",
+    "                        # print text/plain emails and skip attachments\n",
+    "                        print(body)\n",
+    "                    elif \"attachment\" in content_disposition:\n",
+    "                        # download attachment\n",
+    "                        filename = part.get_filename()\n",
+    "                        if filename:\n",
+    "                            folder_name = clean(subject)\n",
+    "                            if not os.path.isdir(folder_name):\n",
+    "                                # make a folder for this email (named after the subject)\n",
+    "                                os.mkdir(folder_name)\n",
+    "                            filepath = os.path.join(folder_name, filename)\n",
+    "                            # download attachment and save it\n",
+    "                            open(filepath, \"wb\").write(part.get_payload(decode=True))\n",
+    "            else:\n",
+    "                # extract content type of email\n",
+    "                content_type = msg.get_content_type()\n",
+    "                # get the email body\n",
+    "                body = msg.get_payload(decode=True).decode()\n",
+    "                if content_type == \"text/plain\":\n",
+    "                    # print only text email parts\n",
+    "                    print(body)\n",
+    "            if content_type == \"text/html\":\n",
+    "                # if it's HTML, create a new HTML file and open it in browser\n",
+    "                folder_name = clean(subject)\n",
+    "                if not os.path.isdir(folder_name):\n",
+    "                    # make a folder for this email (named after the subject)\n",
+    "                    os.mkdir(folder_name)\n",
+    "                filename = \"index.html\"\n",
+    "                filepath = os.path.join(folder_name, filename)\n",
+    "                # write the file\n",
+    "                open(filepath, \"w\").write(body)\n",
+    "                # open in the default browser\n",
+    "                webbrowser.open(filepath)\n",
+    "            print(\"=\"*100)\n",
+    "# close the connection and logout\n",
+    "imap.close()\n",
+    "imap.logout()"
    ]
   }
  ],
@@ -45,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
