--- a/projektinis.ipynb
+++ b/projektinis.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... --- ...\n",
-      "PYTHON\n"
+      ".--. .- ..- .-.. .. ..- ...\n",
+      "PAULIUS\n"
      ]
     }
    ],
@@ -38,43 +38,63 @@
     "       return ''.join(decrypted[i] for i in txt.split())\n",
     "    return ' '.join(encrypted[i] for i in txt.upper())\n",
     "\n",
-    "print(morzesabc(\"SOS\"))\n",
-    "print(morzesabc('.--. -.-- - .... --- -.'))\n",
+    "print(morzesabc(\"paulius\"))\n",
+    "print(morzesabc(\".--. .- ..- .-.. .. ..- ...\"))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tkinter/__init__.py\", line 1892, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"/var/folders/n7/nl3r51111bd91bmy_cbvf8100000gn/T/ipykernel_96704/2607223073.py\", line 21, in download\n",
+      "    pytube.YouTube(x.get()).streams.first().download(skip_existing=True, output_path=\"./\")\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pytube/__main__.py\", line 77, in __init__\n",
+      "    self.video_id = extract.video_id(url)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pytube/extract.py\", line 80, in video_id\n",
+      "    return regex_search(r\"(?:v=|\\/)([0-9A-Za-z_-]{11}).*\", url, group=1)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pytube/helpers.py\", line 34, in regex_search\n",
+      "    raise RegexMatchError(caller=\"regex_search\", pattern=pattern)\n",
+      "pytube.exceptions.RegexMatchError: regex_search: could not find match for (?:v=|\\/)([0-9A-Za-z_-]{11}).*\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter\n",
     "import pytube\n",
     "\n",
+    "\n",
     "root = tkinter.Tk()\n",
-    "root.geometry(\"350x325\")\n",
+    "root.geometry(\"350x150\")\n",
     "root.title(\"YouTube Downloader\")\n",
     "root.resizable(0,0)\n",
-    "root.wm_minsize(0,0)\n",
     "\n",
     "\n",
-    "myVar = tkinter.StringVar()\n",
-    "myVar.set(\"YouTube Link:\")\n",
-    "tkinter.Label(root, textvariable=myVar, width=50).pack(pady=5)\n",
+    "x = tkinter.StringVar()\n",
+    "x.set(\"YouTube link:\")\n",
+    "tkinter.Label(root, textvariable=x, width=0).pack(pady=5)\n",
     "\n",
     "link = tkinter.StringVar()\n",
     "\n",
     "def download():\n",
     "   \n",
-    "        myVar.set(\"\")\n",
+    "        x.set(\"YouTube link:\")\n",
     "        root.update()\n",
-    "        pytube.YouTube(link.get()).streams.first().download(skip_existing=True, output_path=\"./\")\n",
-    "        myVar.set(\"Great success\".format(title_wrapped))\n",
+    "        pytube.YouTube(x.get()).streams.first().download(skip_existing=True, output_path=\"./\")\n",
+    "        x.set(\"Great success\")\n",
     "   \n",
     "\n",
     "tkinter.Entry(root, textvariable=link, width=40).pack(pady=10)\n",
-    "tkinter.Button(root, text=f\"Download!\", command=download, fg=\"green\", bg=\"white\").pack()\n",
+    "tkinter.Button(root, text=f\"Download\", command=download, fg=\"red\", bg=\"white\").pack()\n",
     "\n",
     "\n",
     "root.mainloop()"
