--- a/final.ipynb
+++ b/final.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".--. .- ..- .-.. .. ..- ...\n",
+      ".\n",
       "PAULIUS\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "def morzesabc(txt):\n",
     "    encrypted = {'A': '.-', 'B': '-...', 'C': '-.-.', \n",
     "                    'D': '-..', 'E': '.', 'F': '..-.', \n",
@@ -38,14 +39,17 @@
     "       return ''.join(decrypted[i] for i in txt.split())\n",
     "    return ' '.join(encrypted[i] for i in txt.upper())\n",
     "\n",
-    "print(morzesabc(\"paulius\"))\n",
+    "\n",
+    "print(morzesabc(\"e\"))\n",
     "print(morzesabc(\".--. .- ..- .-.. .. ..- ...\"))\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,8 +60,8 @@
       "Traceback (most recent call last):\n",
       "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tkinter/__init__.py\", line 1892, in __call__\n",
       "    return self.func(*args)\n",
-      "  File \"/var/folders/n7/nl3r51111bd91bmy_cbvf8100000gn/T/ipykernel_96704/2607223073.py\", line 21, in download\n",
-      "    pytube.YouTube(x.get()).streams.first().download(skip_existing=True, output_path=\"./\")\n",
+      "  File \"/var/folders/n7/nl3r51111bd91bmy_cbvf8100000gn/T/ipykernel_31209/879462500.py\", line 20, in download\n",
+      "    pytube.YouTube(link.get()).streams.first().download(skip_existing=True, output_path=\"./\")\n",
       "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pytube/__main__.py\", line 77, in __init__\n",
       "    self.video_id = extract.video_id(url)\n",
       "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pytube/extract.py\", line 80, in video_id\n",
@@ -71,7 +75,6 @@
    "source": [
     "import tkinter\n",
     "import pytube\n",
-    "\n",
     "\n",
     "root = tkinter.Tk()\n",
     "root.geometry(\"350x150\")\n",
@@ -87,15 +90,14 @@
     "\n",
     "def download():\n",
     "   \n",
-    "        x.set(\"YouTube link:\")\n",
+    "        x.set(\"\")\n",
     "        root.update()\n",
-    "        pytube.YouTube(x.get()).streams.first().download(skip_existing=True, output_path=\"./\")\n",
+    "        pytube.YouTube(link.get()).streams.first().download(skip_existing=True, output_path=\"./\")\n",
     "        x.set(\"Great success\")\n",
     "   \n",
     "\n",
     "tkinter.Entry(root, textvariable=link, width=40).pack(pady=10)\n",
-    "tkinter.Button(root, text=f\"Download\", command=download, fg=\"red\", bg=\"white\").pack()\n",
-    "\n",
+    "tkinter.Button(root, text=\"Download\", command=download, fg=\"red\", bg=\"white\").pack()\n",
     "\n",
     "root.mainloop()"
    ]
