--- a/final.ipynb
+++ b/final.ipynb
@@ -40,7 +40,7 @@
     "    return ' '.join(encrypted[i] for i in txt.upper())\n",
     "\n",
     "\n",
-    "print(morzesabc(\"e\"))\n",
+    "print(morzesabc(\"paulius\"))\n",
     "print(morzesabc(\".--. .- ..- .-.. .. ..- ...\"))\n",
     "\n",
     "\n",
