--- a/final.ipynb
+++ b/final.ipynb
@@ -75,15 +75,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'engine' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m synthesizer \u001b[38;5;241m=\u001b[39m pyttsx3\u001b[38;5;241m.\u001b[39minit()\n\u001b[1;32m      7\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the text: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m \u001b[43mengine\u001b[49m\u001b[38;5;241m.\u001b[39msay(text) \n\u001b[1;32m     10\u001b[0m engine\u001b[38;5;241m.\u001b[39mrunAndWait() \n\u001b[1;32m     11\u001b[0m engine\u001b[38;5;241m.\u001b[39mstop()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'engine' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# text to voice.mp3\n",
     "\n",
     "import pyttsx3\n",
     "\n",
-    "synthesizer = pyttsx3.init()\n",
+    "engine = pyttsx3.init()\n",
     "\n",
     "text = input(\"Enter the text: \")\n",
     "\n",
